--- a/HundirLaFlota/gui/.gitignore
+++ b/HundirLaFlota/gui/.gitignore
@@ -3,3 +3,16 @@
 /TableroBarcos.class
 /TableroBot.class
 /TableroTop.class
+/LabelGridCombate.class
+/LabelTipoBarco.class
+/MenuInicial.class
+/PanelCombate.class
+/PanelCombateActionHandler.class
+/PanelSituaBarcos$1.class
+/PanelSituaBarcos$2.class
+/PanelSituaBarcos$3.class
+/PanelSituaBarcos.class
+/textInputArea$1.class
+/textInputArea$2.class
+/textInputArea$3.class
+/textInputArea.class
