--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/Conector_MYSQL_JDBC/mysql-connector-java-5.1.42-bin.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
