MP version 0.5, cambios en la GUI:
He anyadido los sets de coordenadas a las partidas para comprobar que el
usuario no puede "mentir" y decir que no hay barco en una posicion
cuando si lo hay, tambien por si acaso se repetian las posiciones
atacadas(antes el control era solo en la GUI)

Aparte de eso he intentado hacer mas sencillas de modificar y accesibles
las variables del juego y ahora las importantes (dimension del grid,
numero y tamanyo de los barcos etc) estan en MainWindow. El servidor
usar este total de posiciones de barcos para saber las que espera
recibir de los clientes cuando se conectan (cuidado si la cambias y
ejecutas un cliente sin reiniciar el server ya que enviara diferente
numero de posiciones de las que este espera, he añadido un comando al
servidor para readquirir el valor)

En teoria aparte de testear que todo vaya bien lo unico que falta son
los graficos y implementar la reconexion de los usuarios por lo que
respecta al multiplayer. A lo mejor introducir una manera de formatear
diferente los datos enviados/recibidos por el usuario y tambien cambiar
la GUI del menu principal y la resta de ventanas.

--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/Conector_MYSQL_JDBC/mysql-connector-java-5.1.42-bin.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/ramon/bin/mysql-connector-java-5.1.41/mysql-connector-java-5.1.41-bin.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
