--- a/HundirLaFlota/gui/.gitignore
+++ b/HundirLaFlota/gui/.gitignore
@@ -17,3 +17,9 @@
 /textInputArea$3.class
 /textInputArea.class
 /LabelGridBarcos.class
+/mainWindow.class
+/MainWindow.class
+/MainWindow$windowState.class
+/GridLabel.class
+/GridLabelCombate.class
+/.gitignore
